--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/">
+    <script>document.write('<base href="' + document.location + '" />');</script>
     <title>Angular Tour of Heroes</title>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="styles.css">
+
     <!-- Polyfills -->
     <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
 
@@ -23,5 +23,4 @@
     <my-app>Loading...</my-app>
   </body>
 </html>
-
 
